# irpo

./: CMakeLists.txt  LICENSE  README.md
api/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/src/: __main__.py
api/src/app/: __init__.py  app.py  settings.py
api/src/app/api/: auth.py
api/src/app/api/user/: __init__.py  controllers.py  models.py  views.py
api/tests/: conftest.py
api/tests/api/: test_status.py
cmake/: cpr_external.cmake
onyx-lm/: CMakeLists.txt
onyx-lm/cmake/: OnyxConfig.cmake.in  json_external.cmake
onyx-lm/include/: CMakeLists.txt  onyx.h
onyx-lm/onyx-lm/: CMakeLists.txt
onyx-lm/onyx-lm/include/: CMakeLists.txt  exceptions.h  onyx.h
onyx-lm/onyx-lm/src/: CMakeLists.txt  SMBIOS.cpp  SMBIOS.h  onyx.cpp
onyx-lm/sample/: CMakeLists.txt  main.cpp
onyx-lm/src/: CMakeLists.txt
